--- a/searchBar.html
+++ b/searchBar.html
@@ -1,5 +1,8 @@
+
 <div class="tm-section tm-bg-img">
 	<!--id="tm-section-1"-->
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 	<div class="tm-bg-white ie-container-width-fix-2">
 		<div class="container ie-h-align-center-fix">
 			<div class="row">
